Fixing overflow issue on case study screenshot

--- a/wp-content/themes/hoverboard-v2/src/scss/partials/_content.scss
+++ b/wp-content/themes/hoverboard-v2/src/scss/partials/_content.scss
@@ -4,6 +4,7 @@
   @include breakpoint(600px) {
     padding-top: $base--spacing * 2;
     padding-bottom: $base--spacing * 2;
+    overflow: hidden;
   }
 }
 
